--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1764,9 +1764,9 @@ only screen and (min-width: 576px) and (max-width: 767px),
 }
 
 .menu_bar {
-    display: -webkit-inline-box;
+    /* display: -webkit-inline-box; */
     display: -ms-inline-flexbox;
-    display: inline-flex;
+    /* display: inline-flex; */
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -4389,7 +4389,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
     position: absolute;
     top: 0;
     inset-inline-start: 0;
-    z-index: -1;
+    z-index: 1;
     border-start-start-radius: 12px;
     border-end-start-radius: 12px;
 }
@@ -4409,6 +4409,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
     padding: 40px;
     overflow: auto;
     height: 100%;
+    z-index: 2;
 }
 
 .hamburger_wrapper::before {
@@ -4442,6 +4443,8 @@ only screen and (min-width: 576px) and (max-width: 767px),
     font-size: 35px;
     line-height: 1;
     color: var(--tj-color-common-white);
+    position: relative;
+    z-index: 4;
 }
 
 @media (max-width: 575px) {
