--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1764,9 +1764,9 @@ only screen and (min-width: 576px) and (max-width: 767px),
 }
 
 .menu_bar {
-    /* display: -webkit-inline-box; */
+    display: -webkit-inline-box;
     display: -ms-inline-flexbox;
-    /* display: inline-flex; */
+    display: inline-flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -4357,6 +4357,83 @@ only screen and (min-width: 576px) and (max-width: 767px),
 
 .hamburger-area.opened {
     inset-inline-end: 15px;
+}
+
+/* Mobile Menu Styles */
+.mobile-menu-area {
+    padding: 20px 0;
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
+.mobile-menu-list {
+    padding: 0;
+    margin: 0;
+}
+
+.mobile-menu-list li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    position: relative;
+}
+
+.mobile-menu-list li:last-child {
+    border-bottom: none;
+}
+
+.mobile-menu-list li > a {
+    display: block;
+    padding: 15px 20px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+.mobile-menu-list li > a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #1e8a8a;
+}
+
+.mobile-menu-list .has-dropdown > a::after {
+    content: '\f107';
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform 0.3s ease;
+}
+
+.mobile-menu-list .has-dropdown.open > a::after {
+    transform: translateY(-50%) rotate(180deg);
+}
+
+.mobile-menu-list .sub-menu {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.2);
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu-list .sub-menu.show {
+    display: block;
+}
+
+.mobile-menu-list .sub-menu li > a {
+    padding: 12px 40px;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.mobile-menu-list .sub-menu .sub-menu li > a {
+    padding-left: 60px;
+}
+
+.mobile-menu-list .sub-menu .sub-menu .sub-menu li > a {
+    padding-left: 80px;
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px),
